force-app/main/default/objects/Onboarding__c/fields/Billing_Setup_Call_Path__c.field-meta.xml
<CustomField>
    <fullName>Billing_Setup_Call_Path__c</fullName>
    <label>Billing Setup Call Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Combined</fullName>
            </value>
            <value>
                <fullName>Brand New Program</fullName>
            </value>
            <value>
                <fullName>1:1 Single-Site</fullName>
            </value>
            <value>
                <fullName>1:1 Multi-Site</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>1:1 Setup Call</fullName>
            </value>
            <value>
                <fullName>Site-Add</fullName>
            </value>
            <value>
                <fullName>Self Serve</fullName>
            </value>
            <value>
                <fullName>Gov Group Training</fullName>
            </value>
            <value>
                <fullName>BNP Site-Add</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>