force-app/main/default/objects/Onboarding__c/fields/Billing_Setup_Threshold_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Setup_Threshold_Met_Date__c</fullName>
    <description>Mapped from school object. Part of billing funnel automation</description>
    <formula>Account__r.School_Object__r.Billing_Setup_Threshold_Met_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Setup Threshold Met Date</label>
    <type>Date</type>
</CustomField>