force-app/main/default/objects/Onboarding__c/fields/Billing_Setup_Threshold_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Setup_Threshold_Met_Stamp__c</fullName>
    <label>Billing Setup Threshold Met Stamp</label>
    <type>Date</type>
</CustomField>