force-app/main/default/objects/Onboarding__c/fields/Billing_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Billing_Timeline__c</fullName>
    <label>Billing Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Timeline</valueSetName>
    </valueSet>
</CustomField>