force-app/main/default/objects/Onboarding__c/fields/Billing_TLD__c.field-meta.xml
<CustomField>
    <fullName>Billing_TLD__c</fullName>
    <description>Target Launch Date for Billing</description>
    <inlineHelpText>Target Launch Date for Billing</inlineHelpText>
    <label>Billing TLD</label>
    <type>Date</type>
</CustomField>