force-app/main/default/objects/Onboarding__c/fields/Billing_Verified_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verified_Date_Stamp__c</fullName>
    <label>Billing Verified Date Stamp</label>
    <type>Date</type>
</CustomField>