force-app/main/default/objects/Onboarding__c/fields/Blockers_For_Adding_Students_Today__c.field-meta.xml
<CustomField>
    <fullName>Blockers_For_Adding_Students_Today__c</fullName>
    <description>Captured by sales on closed-won opp.</description>
    <inlineHelpText>If the center is not able to add students when sale was made, this field shows why.</inlineHelpText>
    <label>Blockers For Adding Students Today</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blockers_For_Adding_Students_Today</valueSetName>
    </valueSet>
</CustomField>