force-app/main/default/objects/Onboarding__c/fields/Board_or_Additional_DMs_Not_Demo_d__c.field-meta.xml
<CustomField>
    <fullName>Board_or_Additional_DMs_Not_Demo_d__c</fullName>
    <description>Captured by sales on closed-won opp.</description>
    <inlineHelpText>Shows if there were any board members or additional decision makers that were not included in the demo.</inlineHelpText>
    <label>Board or Additional DMs Not Demo&apos;d</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Board_or_Additional_DMs_Not_Demo_d</valueSetName>
    </valueSet>
</CustomField>