force-app/main/default/objects/Onboarding__c/fields/Brand_New_Program__c.field-meta.xml
<CustomField>
    <fullName>Brand_New_Program__c</fullName>
    <description>Mapped from Combined Funnel in SaaS and Billing onboarding update flow. Used to flag Brand New Programs for historical reporting.</description>
    <inlineHelpText>Used to flag Brand New Programs for historical reporting. Updated from the Combined Funnel the onboarding is related to.</inlineHelpText>
    <label>Brand New Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_New_Program_Flag</valueSetName>
    </valueSet>
</CustomField>