force-app/main/default/objects/Onboarding__c/fields/Brightwheel_School_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_School_UUID__c</fullName>
    <formula>Account__r.School_Object__r.Brightwheel_School_UUID__c</formula>
    <label>Brightwheel School UUID</label>
    <type>Text</type>
</CustomField>