force-app/main/default/objects/Onboarding__c/fields/Buying_Mindset__c.field-meta.xml
<CustomField>
    <fullName>Buying_Mindset__c</fullName>
    <description>Captured by sales on closed won opp</description>
    <inlineHelpText>What was the new customers mindset at the time of closed-won?</inlineHelpText>
    <label>Buying Mindset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buying_Mindset</valueSetName>
    </valueSet>
</CustomField>