force-app/main/default/objects/Onboarding__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Captured by sales on closed-won opp.</description>
    <inlineHelpText>The center&apos;s student capacity.</inlineHelpText>
    <label>Licensed Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>