force-app/main/default/objects/Onboarding__c/fields/CES_Survey_First_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CES_Survey_First_Sent_Date__c</fullName>
    <description>Min date between CES Survey Send Date on the Account and the Primary Contact related to the onboarding (which are populated by rollup helper when CES Survey email tasks are logged)</description>
    <formula>IF(
    AND(
       NOT(ISBLANK(Account__r.CES_Survey_Send_Date__c)),
       ISBLANK(Primary_Contact__r.CES_Survey_Send_Date__c)
    ),
    Account__r.CES_Survey_Send_Date__c,
    IF(
        AND(
            ISBLANK(Account__r.CES_Survey_Send_Date__c),
            NOT(ISBLANK(Primary_Contact__r.CES_Survey_Send_Date__c))
        ),
        Primary_Contact__r.CES_Survey_Send_Date__c,
        IF(
            Account__r.CES_Survey_Send_Date__c &lt; Primary_Contact__r.CES_Survey_Send_Date__c,
            Account__r.CES_Survey_Send_Date__c,
            Primary_Contact__r.CES_Survey_Send_Date__c
        )
    )
)</formula>
    <inlineHelpText>Min date between CES Survey Send Date on the Account and the Primary Contact related to the onboarding</inlineHelpText>
    <label>CES Survey First Sent Date</label>
    <type>Date</type>
</CustomField>