force-app/main/default/objects/Onboarding__c/fields/CF_SaaS_Postponed_Reason__c.field-meta.xml
<CustomField>
    <fullName>CF_SaaS_Postponed_Reason__c</fullName>
    <description>SaaS Postponed Reason from the Combined Funnel the onboarding is related to.</description>
    <formula>TEXT(Combined_Funnel__r.SaaS_Postponed_Reason__c)</formula>
    <inlineHelpText>SaaS Postponed Reason from the Combined Funnel the onboarding is related to.</inlineHelpText>
    <label>CF_SaaS Postponed Reason</label>
    <type>Text</type>
</CustomField>