force-app/main/default/objects/Onboarding__c/fields/Charges_Co_Pays__c.field-meta.xml
<CustomField>
    <fullName>Charges_Co_Pays__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the school charge co-pays?</description>
    <inlineHelpText>Does the school charge co-pays?</inlineHelpText>
    <label>Charges Co-Pays</label>
    <type>Checkbox</type>
</CustomField>