force-app/main/default/objects/Onboarding__c/fields/Check_In_Kiosk_Tablet__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Kiosk_Tablet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check-In Kiosk Tablet</label>
    <type>Checkbox</type>
</CustomField>