force-app/main/default/objects/Onboarding__c/fields/Churn_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Level__c</fullName>
    <description>References global picklist set for Churn Risk Level.</description>
    <inlineHelpText>What is the level of churn risk?</inlineHelpText>
    <label>Churn Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Churn_Risk_Level</valueSetName>
    </valueSet>
</CustomField>