force-app/main/default/objects/Onboarding__c/fields/Combined_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Combined_Activation_Status__c</fullName>
    <description>Evaluates SaaS and Billing Onboarding Funnel Stages on the school object that the Onboarding is related to.</description>
    <formula>Account__r.Combined_Activation_Status__c</formula>
    <inlineHelpText>Shows whether the center is SaaS and Billing Activated, SaaS Only Activated, Billing Only Activated, Onboarding, or Unknown.</inlineHelpText>
    <label>Combined Activation Status</label>
    <type>Text</type>
</CustomField>