force-app/main/default/objects/Onboarding__c/fields/Combined_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Combined_Funnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combined Funnel</label>
    <referenceTo>Combined_Funnel__c</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>