force-app/main/default/objects/Onboarding__c/fields/Combined_Webinar_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Combined_Webinar_3_Date__c</fullName>
    <description>Lookup to Combined Webinar 3 Date on the Account for reps to reference.</description>
    <formula>Account__r.Combined_Webinar_3_Date__c</formula>
    <inlineHelpText>References the Combined Webinar 3 Date from the Account associated to the onboarding.</inlineHelpText>
    <label>Combined Webinar 3 Date</label>
    <type>Date</type>
</CustomField>