force-app/main/default/objects/Onboarding__c/fields/Complete_Setup_Threshold_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Complete_Setup_Threshold_Stamp__c</fullName>
    <label>Complete Setup Threshold Stamp</label>
    <type>Date</type>
</CustomField>