force-app/main/default/objects/Onboarding__c/fields/Completed_First_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Completed_First_Lesson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed First Lesson</label>
    <type>Checkbox</type>
</CustomField>