force-app/main/default/objects/Onboarding__c/fields/Confirmed_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Launch_Date__c</fullName>
    <label>Confirmed Launch Date</label>
    <type>Date</type>
</CustomField>