force-app/main/default/objects/Onboarding__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Captured by sales on closed-won opp.</description>
    <inlineHelpText>Agreed upon contract when sale was made.</inlineHelpText>
    <label>Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract</valueSetName>
    </valueSet>
</CustomField>