force-app/main/default/objects/Onboarding__c/fields/Created_By_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Role__c</fullName>
    <description>Role of the user that created the onboarding.</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <inlineHelpText>Role of the user that created the onboarding.</inlineHelpText>
    <label>Created By User Role</label>
    <type>Text</type>
</CustomField>