force-app/main/default/objects/Onboarding__c/fields/Current_Center_Operating_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Center_Operating_Status__c</fullName>
    <description>The Current Center Operating Status value from this field on the Account associated to the Onboarding.</description>
    <formula>TEXT(Account__r.Current_Center_Operating_Status__c)</formula>
    <inlineHelpText>The Current Center Operating Status value from this field on the Account associated to the Onboarding.</inlineHelpText>
    <label>Current Center Operating Status</label>
    <type>Text</type>
</CustomField>