force-app/main/default/objects/Onboarding__c/fields/Current_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Current_Coupon__c</fullName>
    <description>Brightwheel coupon code</description>
    <formula>Account__r.School_Object__r.Current_Coupon__c</formula>
    <inlineHelpText>Brightwheel coupon code</inlineHelpText>
    <label>Current Coupon</label>
    <type>Text</type>
</CustomField>