force-app/main/default/objects/Onboarding__c/fields/Current_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Current_Enrollment__c</fullName>
    <description>Captured by sales on closed-won opp.</description>
    <inlineHelpText>The center&apos;s current student enrollment at the time of closed-won.</inlineHelpText>
    <label>Current Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>