force-app/main/default/objects/Onboarding__c/fields/Current_Enrollment_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Current_Enrollment_As_Of__c</fullName>
    <description>Captured by sales on closed won opp and used in process builder to date and time stamp any time the field is changed.</description>
    <inlineHelpText>Date and Time when the Current Enrollment field was last changed.</inlineHelpText>
    <label>Current Enrollment As Of</label>
    <type>DateTime</type>
</CustomField>