force-app/main/default/objects/Onboarding__c/fields/Current_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Name__c</fullName>
    <description>Sequence Name of the most recent sequence the Primary Contact associated to the Onboarding was in.</description>
    <formula>Primary_Contact__r.Current_Sequence_Name__c</formula>
    <inlineHelpText>Sequence Name of the most recent sequence the Primary Contact associated to the Onboarding was in.</inlineHelpText>
    <label>Current Sequence Name</label>
    <type>Text</type>
</CustomField>