force-app/main/default/objects/Onboarding__c/fields/Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Status__c</fullName>
    <description>Sequence Status of the current or most recent sequence the Primary Contact was in. Active, Failed, Paused, or Bounced.</description>
    <formula>Primary_Contact__r.Current_Sequence_Status__c</formula>
    <inlineHelpText>Sequence Status of the current or most recent sequence the Primary Contact was in. Active, Failed, Paused, or Bounced.</inlineHelpText>
    <label>Current Sequence Status</label>
    <type>Text</type>
</CustomField>