force-app/main/default/objects/Onboarding__c/fields/Current_Sequence_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Task_Due_Date__c</fullName>
    <description>Date/Time the next task in the sequence is due for the Primary Contact.</description>
    <formula>Primary_Contact__r.Current_Sequence_Task_Due_Date__c</formula>
    <inlineHelpText>Date/Time the next task in the sequence is due for the Primary Contact.</inlineHelpText>
    <label>Current Sequence Task Due Date</label>
    <type>DateTime</type>
</CustomField>