force-app/main/default/objects/Onboarding__c/fields/Current_Sequence_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_User_ID__c</fullName>
    <description>From the primary contact associated to the onboarding.</description>
    <formula>Primary_Contact__r.Current_Sequence_User_SFDC_ID__r.Email</formula>
    <label>Current Sequence User ID</label>
    <type>Text</type>
</CustomField>