force-app/main/default/objects/Onboarding__c/fields/Current_Tech__c.field-meta.xml
<CustomField>
    <fullName>Current_Tech__c</fullName>
    <description>Captured by Sales on closed-won opp.</description>
    <inlineHelpText>What is the center currently using for technology?</inlineHelpText>
    <label>Current Tech</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>