force-app/main/default/objects/Onboarding__c/fields/Current_Tool_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Current_Tool_for_Billing__c</fullName>
    <description>Reference to global picklist that is also used in a field on the account by the billing team.</description>
    <inlineHelpText>What tool does the center currently use for billing?</inlineHelpText>
    <label>Current Tool for Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Billing_Solution</valueSetName>
    </valueSet>
</CustomField>