force-app/main/default/objects/Onboarding__c/fields/Current_Tool_for_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Current_Tool_for_Check_In__c</fullName>
    <label>Current Tool for Check-In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Tool_for_Check_In</valueSetName>
    </valueSet>
</CustomField>