force-app/main/default/objects/Onboarding__c/fields/Current_Tool_for_Parent_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Current_Tool_for_Parent_Engagement__c</fullName>
    <label>Current Tool for Parent Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Tool_for_Parent_Engagement</valueSetName>
    </valueSet>
</CustomField>