force-app/main/default/objects/Onboarding__c/fields/Current_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Verification_Status__c</fullName>
    <description>Mapped from school object. Part of billing funnel automation</description>
    <formula>Account__r.School_Object__r.Current_Verification_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Verification Status</label>
    <type>Text</type>
</CustomField>