force-app/main/default/objects/Onboarding__c/fields/Customer_Billing_Path__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Path__c</fullName>
    <description>FTS will manually select the option of this field corresponding with the current outline of different customer path options</description>
    <label>Customer Billing Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Billing_Path</valueSetName>
    </valueSet>
</CustomField>