force-app/main/default/objects/Onboarding__c/fields/Customer_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Customer_Next_Steps__c</fullName>
    <description>Used by Billing team to track next steps</description>
    <inlineHelpText>Short snapshot of what the next steps are for the customer.</inlineHelpText>
    <label>Customer Next Steps</label>
    <type>TextArea</type>
</CustomField>