force-app/main/default/objects/Onboarding__c/fields/Customer_Persona__c.field-meta.xml
<CustomField>
    <fullName>Customer_Persona__c</fullName>
    <inlineHelpText>The persona of the main implementer you are working with for the onboarding.</inlineHelpText>
    <label>Customer Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Persona</valueSetName>
    </valueSet>
</CustomField>