force-app/main/default/objects/Onboarding__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Reference to Customer Segment on the Account which is calculated based off the Capacity number captured on the Account.</description>
    <formula>Account__r.Customer_Segment__c</formula>
    <inlineHelpText>Reference to Customer Segment on the Account which is calculated based off the Capacity number captured on the Account.</inlineHelpText>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>