force-app/main/default/objects/Onboarding__c/fields/Date_of_Activation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Activation__c</fullName>
    <description>Date of Activation from the school object associated to the account.</description>
    <formula>Account__r.School_Object__r.SaaS_Activation_Date__c</formula>
    <inlineHelpText>Date of Activation populated from production data when Activation threshold metrics were achieved.</inlineHelpText>
    <label>Date of Activation</label>
    <type>Date</type>
</CustomField>