force-app/main/default/objects/Onboarding__c/fields/Date_of_Override__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Override__c</fullName>
    <description>Used in Process Builder to date stamp when Activation Override is changed (goes from null to populated).</description>
    <inlineHelpText>Date when Activation Override was filled in.</inlineHelpText>
    <label>Date of Override</label>
    <type>Date</type>
</CustomField>