force-app/main/default/objects/Onboarding__c/fields/Days_Billing_Call_1_to_1_Bill_Sent_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Days_Billing_Call_1_to_1_Bill_Sent_Stamp__c</fullName>
    <description>If Billing Call or Webinar Status is Complete, shows the number of days from the Billing Call or Webinar Date to the One Bill Sent Threshold Met Stamp. (One_Bill_Sent_Threshold_Met_Stamp__c - Billing_Call_or_Webinar_Date__c)</description>
    <formula>IF(
   ISPICKVAL(Billing_Call_or_Webinar_Status__c, &apos;Complete&apos;),
   One_Bill_Sent_Threshold_Met_Stamp__c - Billing_Call_or_Webinar_Date__c,
   NULL)</formula>
    <inlineHelpText>If Billing Call or Webinar Status is Complete, shows the number of days from the Billing Call or Webinar Date to the One Bill Sent Threshold Met Stamp.</inlineHelpText>
    <label>Days Billing Call 1 to 1 Bill Sent Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>