force-app/main/default/objects/Onboarding__c/fields/Days_Billing_Call_1_to__c.field-meta.xml
<CustomField>
    <fullName>Days_Billing_Call_1_to__c</fullName>
    <description>If Billing Call or Webinar Status is Complete, shows the number of days from the Billing Call or Webinar Date to the Billing Setup Threshold Met Stamp date. (Billing_Setup_Threshold_Met_Stamp__c  -  Billing_Call_or_Webinar_Date__c)</description>
    <formula>IF(
   ISPICKVAL(Billing_Call_or_Webinar_Status__c, &apos;Complete&apos;),
   Billing_Setup_Threshold_Met_Stamp__c  -  Billing_Call_or_Webinar_Date__c,
   NULL)</formula>
    <inlineHelpText>If Billing Call or Webinar Status is Complete, shows the number of days from the Billing Call or Webinar Date to the Billing Setup Threshold Met Stamp date.</inlineHelpText>
    <label>Days Billing Call 1 to Setup Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>