force-app/main/default/objects/Onboarding__c/fields/Days_Billing_Call_1_to_Activated_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Days_Billing_Call_1_to_Activated_Stamp__c</fullName>
    <description>If Billing Call or Webinar Status = Complete, this field shows the number of days between the Billing_Activation_Date_Stamp__c -  Billing_Call_or_Webinar_Date__c</description>
    <formula>IF(
   ISPICKVAL(Billing_Call_or_Webinar_Status__c, &apos;Complete&apos;),
   Billing_Activation_Date_Stamp__c -  Billing_Call_or_Webinar_Date__c,
   NULL)</formula>
    <inlineHelpText>If Billing Call or Webinar Status = Complete, this field shows the number of days between the  Billing Call or Webinar Date and the Billing Activation Date Stamp.</inlineHelpText>
    <label>Days Billing Call 1 to Activated Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>