force-app/main/default/objects/Onboarding__c/fields/Days_Billing_CW_to_Activated_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Days_Billing_CW_to_Activated_Stamp__c</fullName>
    <description>Number of days from the Billing Launch Date Stamp to the Billing Activation Date Stamp field. (Billing_Activation_Date_Stamp__c - Billing_Launch_Date_Stamp__c)</description>
    <formula>Billing_Activation_Date_Stamp__c - Billing_Launch_Date_Stamp__c</formula>
    <inlineHelpText>Number of days from the Billing Launch Date Stamp to the Billing Activation Date Stamp field.</inlineHelpText>
    <label>Days Billing CW to Activated Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>