force-app/main/default/objects/Onboarding__c/fields/Days_Billing_CW_to_Billing_Setup_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Days_Billing_CW_to_Billing_Setup_Stamp__c</fullName>
    <description>Number of days from the Billing Launch Date Stamp to the Billing Setup Threshold Met Stamp field. (Billing_Setup_Threshold_Met_Stamp__c - Billing_Launch_Date_Stamp__c)</description>
    <formula>Billing_Setup_Threshold_Met_Stamp__c - Billing_Launch_Date_Stamp__c</formula>
    <inlineHelpText>Number of days from the Billing Launch Date Stamp to the Billing Setup Threshold Met Stamp field.</inlineHelpText>
    <label>Days Billing CW to Billing Setup Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>