force-app/main/default/objects/Onboarding__c/fields/Days_Billing_CW_to_One_Cycle_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Days_Billing_CW_to_One_Cycle_Threshold__c</fullName>
    <description>Number of days between Billing Launch Date and One Billing Cycle Threshold Met Date.</description>
    <formula>One_Billing_Cycle_Threshold_Met_Date__c - Billing_Launch_Date__c</formula>
    <inlineHelpText>Number of days between Billing Launch Date and One Billing Cycle Threshold Met Date.</inlineHelpText>
    <label>Days Billing CW to One Cycle Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>