force-app/main/default/objects/Onboarding__c/fields/Days_CW_to_90_Percent_Students_Added__c.field-meta.xml
<CustomField>
    <fullName>Days_CW_to_90_Percent_Students_Added__c</fullName>
    <description>Number of days from the Original Close Date Stamp to the Active Student Enrollment Percent Met date. (Active_Student_Enrollment_Percent_Met__c - Original_Close_Date_Stamp__c)</description>
    <formula>Active_Student_Enrollment_Percent_Met__c - Original_Close_Date_Stamp__c</formula>
    <inlineHelpText>Number of days from the Original Close Date Stamp to the Active Student Enrollment Percent Met date.</inlineHelpText>
    <label>Days CW to 90 Percent Students Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>