force-app/main/default/objects/Onboarding__c/fields/Days_in_Billing_Funnel_Stages__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Billing_Funnel_Stages__c</fullName>
    <description>Today minus Funnel Stage Changed. Different API name to distinguish from SaaS onboarding Days in Stage (populated from school object cross-object formula)</description>
    <formula>TODAY() - Funnel_Stage_Changed__c</formula>
    <inlineHelpText>Number of days since the Funnel Stage value was changed last.</inlineHelpText>
    <label>Days in Billing Funnel Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>