force-app/main/default/objects/Onboarding__c/fields/Days_Open_Operating_to_Billing_Activated__c.field-meta.xml
<CustomField>
    <fullName>Days_Open_Operating_to_Billing_Activated__c</fullName>
    <description>Number of days from the Open and Operating Date to the Billing Activation Date Stamp field. (Billing_Activation_Date_Stamp__c - Open_and_Operating_Date__c)</description>
    <formula>Billing_Activation_Date_Stamp__c - Open_and_Operating_Date__c</formula>
    <inlineHelpText>Number of days from the Open and Operating Date to the Billing Activation Date Stamp field.</inlineHelpText>
    <label>Days Open Operating to Billing Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>