force-app/main/default/objects/Onboarding__c/fields/Days_Open_Operating_to_SaaS_Activated__c.field-meta.xml
<CustomField>
    <fullName>Days_Open_Operating_to_SaaS_Activated__c</fullName>
    <description>Number of days from the Open and Operating Date to the SaaS Activation Date Stamp field. (SaaS_Activation_Date_Stamp__c - Open_and_Operating_Date__c)</description>
    <formula>SaaS_Activation_Date_Stamp__c - Open_and_Operating_Date__c</formula>
    <inlineHelpText>Number of days from the Open and Operating Date to the SaaS Activation Date Stamp field.</inlineHelpText>
    <label>Days Open Operating to SaaS Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>