force-app/main/default/objects/Onboarding__c/fields/Days_Past_TLD__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_TLD__c</fullName>
    <description>Counts number of days since Target Launch Date.</description>
    <formula>TODAY() - Target_Launch_Date__c</formula>
    <inlineHelpText>Number of days since Target Launch Date.</inlineHelpText>
    <label>Days Past TLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>