force-app/main/default/objects/Onboarding__c/fields/Days_SaaS_CW_to_Activated_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Days_SaaS_CW_to_Activated_Stamp__c</fullName>
    <description>Number of days from the Original Close Date Stamp to the SaaS Activation Date Stamp field. (SaaS_Activation_Date_Stamp__c - Original_Close_Date_Stamp__c)</description>
    <formula>SaaS_Activation_Date_Stamp__c - Original_Close_Date_Stamp__c</formula>
    <inlineHelpText>Number of days from the Original Close Date Stamp to the SaaS Activation Date Stamp field.</inlineHelpText>
    <label>Days SaaS CW to Activated Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>