force-app/main/default/objects/Onboarding__c/fields/Days_SaaS_CW_to_Open_and_Operating__c.field-meta.xml
<CustomField>
    <fullName>Days_SaaS_CW_to_Open_and_Operating__c</fullName>
    <description>Number of days from the Original Close Date Stamp to the Open and Operating Date field. (Open_and_Operating_Date__c - Original_Close_Date_Stamp__c)</description>
    <formula>Open_and_Operating_Date__c - Original_Close_Date_Stamp__c</formula>
    <inlineHelpText>Number of days from the Original Close Date Stamp to the Open and Operating Date field.</inlineHelpText>
    <label>Days SaaS CW to Open and Operating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>