force-app/main/default/objects/Onboarding__c/fields/Days_Since_Billing_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Billing_Launch_Date__c</fullName>
    <formula>TODAY() - DATEVALUE(Account__r.School_Object__r.Billing_Activation_Date_2024__c)</formula>
    <label>Days Since Billing Launch Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>