force-app/main/default/objects/Onboarding__c/fields/Days_Since_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Closed_Won__c</fullName>
    <description>Days since Original Close Date on the Account.</description>
    <formula>TODAY() -  Original_Close_Date__c</formula>
    <inlineHelpText>Days since Original Close Date on the Account.</inlineHelpText>
    <label>Days Since Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>